objects/Tools_Guide__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to exclude these articles from search on help page.</inlineHelpText>
        <label>Exclude From Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Tools Guide</label>
    <pluralLabel>Tools Guide</pluralLabel>
</CustomObject>